# saam

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  README.md  SECURITY.md  conanfile.py
LICENSES/: MIT.txt
apps/demo/: .gitignore  CMakeLists.txt  conanfile.py
apps/demo/src/: component_a.hpp  component_b.hpp  main.cpp  system.hpp
doc/: .gitignore  Aliasing.md  BuildInstructions.md  Contributing.md  GenericDependencyInjection.md  Heap-unique.svg.license  Mutability.md  UserManual.md
include/: .gitignore
include/saam/: .gitignore  any_ptr.hpp  condition.hpp  enable_ref_from_this.hpp  guard.hpp  modes.hpp.in  panic.hpp  ref.hpp  safe_mut.hpp  safe_ref.hpp  safe_ref.hpp.in  sentinel.hpp  shared_recursive_mutex.hpp  synchronized.hpp  var.hpp  version.hpp.in
include/saam/detail/: .gitignore  basic_enable_ref_from_this.hpp  basic_ref.hpp  basic_ref.ipp  basic_var.hpp  basic_var.ipp  borrow_manager.hpp  borrow_manager_traits.hpp  constructor_destructor_traits.hpp  counted_borrow_manager.hpp  default_borrow_manager.hpp.in  guard.ipp  ref.ipp  sentinel.ipp  synchronized.ipp  tracked_borrow_manager.hpp  unchecked_borrow_manager.hpp  var.hpp  var.ipp
include/saam/detail/counted_ref/: enable_ref_from_this.hpp  ref.hpp  var.hpp
include/saam/detail/counted_ref/detail/: borrow_counter.hpp  counted_ref.hpp
include/saam/detail/tracked_ref/: enable_ref_from_this.hpp  ref.hpp  var.hpp
include/saam/detail/tracked_ref/detail/: reference_chain.hpp
include/saam/detail/unchecked_ref/: enable_ref_from_this.hpp  ref.hpp  var.hpp
test/: .gitignore  CMakeLists.txt
test/src/: .gitignore
test/test_counted/: CMakeLists.txt
test/test_counted/src/: borrow_test.cpp  casting_test.cpp  dangling_test.cpp  enable_ref_from_this_test.cpp  legacy_test.cpp  unit_test_panic.cpp  unit_test_panic.hpp  var_test.cpp
test/test_mutex/: CMakeLists.txt
test/test_mutex/src/: best_practice_test.cpp  blindfold_test.cpp  condition_test.cpp  condition_test.cpp.off  guard_test.cpp  sentinel_test.cpp  synchronized_test.cpp  unit_test_panic.cpp
test/test_saam/: CMakeLists.txt
test/test_saam/src/: any_ptr_test.cpp  unit_test_panic.cpp
test/test_tracked/: CMakeLists.txt
test/test_tracked/src/: borrow_test.cpp  casting_test.cpp  dangling_test.cpp  enable_ref_from_this_test.cpp  legacy_test.cpp  unit_test_panic.cpp  var_test.cpp
test/test_unchecked/: CMakeLists.txt
test/test_unchecked/src/: borrow_test.cpp  casting_test.cpp  enable_ref_from_this_test.cpp  legacy_test.cpp  var_test.cpp
test_package/: .gitignore  CMakeLists.txt  conanfile.py
test_package/src/: main.cpp
